--- a/base.html
+++ b/base.html
@@ -21,7 +21,7 @@
 
             <div class="header__derecha" id="navegacion" data-visible="false">
                 <nav class="nav">
-                    <a href="about.html" class="nav__enlace">About</a>
+                    <a href="#" class="nav__enlace">About</a>
                     <a href="#" class="nav__enlace">Location</a>
                     <a href="#" class="nav__enlace">Careers</a>
                 </nav>
@@ -31,100 +31,13 @@
         </div>
     </header>
 
-    <section class="hero">
-            <div class="hero__contenedor">
-                <div class="hero__contenido">
-                    <h1>Scooter sharing made simple</h1>
-                    <p class="hero__texto">Scoot takes the hassle out of urban mobility. Our bikes are placed in convenient locations in each of our cities. Use our app to locate the nearest bike, unlock it with a tap, and you’re away!</p>
-                    <a href="#" class="hero__link">Get Scootin</a>
-                </div>
+    <section class="hero-g">
+        <div class="hero-g__contenedor">
+            <div class="hero-g__contenido">
+                <h1>About</h1>
             </div>
-        <img src="build/img/line.svg" alt="Line Image" class="hero__linea">
+        </div>
     </section>
-
-    <section class="features-s">
-        <div class="features-s__contenedor">
-            <div class="features-s__contenido">
-                <div class="feature">
-                    <img src="build/img/locate.svg" alt="Locate Image" class="feature__imagen">
-                    <div class="feature___contenido">
-                        <h4 class="feature__heading">Locate with app</h4>
-                        <p class="feature__texto">Use the app to find the nearest scooter to you. We are continuously placing scooters in the areas with most demand, so one should never be too far away.</p>
-                    </div>
-                </div> 
-
-                <div class="feature">
-                    <img src="build/img/scooter.svg" alt="Scooter Image" class="feature__imagen">
-                    <div class="feature___contenido">
-                        <h4 class="feature__heading">Pick your scooter</h4>
-                        <p class="feature__texto">We show the most important info for the scooters closest to you. So you know how much charge they have left and can see roughly how much it will cost.</p>
-                    </div>
-                </div> 
-
-                <div class="feature">
-                    <img src="build/img/ride.svg" alt="Ride Image" class="feature__imagen">
-                    <div class="feature___contenido">
-                        <h4 class="feature__heading">Enjoy the ride</h4>
-                        <p class="feature__texto">Scan the QR code and the bike will unlock. Retract the cable lock, put on a helmet, and you’re off! Always lock bikes away from walkways and accessibility ramps.</p>
-                    </div>
-                </div> 
-            </div>      
-        </div>    
-    </section>
-
-    <main class="features-b">
-        <div class="features-b__contenedor">
-            <div class="features-b__contenido">
-                <div class="feature-card">
-                    <div class="feature-card__imagen-c">
-                        <picture>
-                            <source srcset="build/img/telemetry.avif" type="image/avif">
-                            <source srcset="build/img/telemetry.webp" type="image/webp">
-                            <img src="build/img/telemetry.jpg" width="500" height="300" alt="Telemetry Image" class="feature-card__imagen">
-                        </picture>
-                    </div>
-
-                    <div class="feature-card__info">
-                        <h2 class="feature-card__heading">Easy to use riding telemetry</h2>
-                        <p class="feature-card__texto">The Scoot app is available with riding telemetry. This means it can show you your average speed, how long you've been using the scooter, your traveling distance, and many more things all in an easy to use app.</p>
-                        <a href="#" class="feature-card__link">Learn More</a>
-                    </div>    
-                </div>
-
-                <div class="feature-card">
-                    <div class="feature-card__imagen-c">
-                        <picture>
-                            <source srcset="build/img/near-you.avif" type="image/avif">
-                            <source srcset="build/img/near-you.webp" type="image/webp">
-                            <img src="build/img/near-you.jpg" width="500" height="300" alt="Near you Image" class="feature-card__imagen">
-                        </picture>
-                    </div>
-
-                    <div class="feature-card__info">
-                        <h2 class="feature-card__heading">Coming to a city near you</h2>
-                        <p class="feature-card__texto">Scoot is available in 4 major cities so far. We’re expanding rapidly, so be sure to let us know if you want to see us in your hometown. We’re aiming to let our scooters loose on 23 cities over the coming year.</p>
-                        <a href="#" class="feature-card__link">Learn More</a>
-                    </div>    
-                </div>
-
-                <div class="feature-card">
-                    <div class="feature-card__imagen-c">
-                        <picture>
-                            <source srcset="build/img/payments.avif" type="image/avif">
-                            <source srcset="build/img/payments.webp" type="image/webp">
-                            <img src="build/img/payments.jpg" width="500" height="300" alt="Payments Image" class="feature-card__imagen">
-                        </picture>
-                    </div>
-
-                    <div class="feature-card__info">
-                        <h2 class="feature-card__heading">Zero hassle payments</h2>
-                        <p class="feature-card__texto">Our payment is as easy as one two three. We accept most credit cards and debit cards. You can also link your PayPal account inside the app. Need to pay later? No worries! You can defer payment for up to a month.</p>
-                        <a href="#" class="feature-card__link">Learn More</a>
-                    </div>    
-                </div>
-            </div>
-        </div> 
-    </main>
 
     <section class="download">
         <div class="download__contenedor">
