--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="build/img/favicon-32x32.png">
     <link rel="stylesheet" href="build/css/app.css">
   
 </head>
@@ -22,8 +23,8 @@
             <div class="header__derecha" id="navegacion" data-visible="false">
                 <nav class="nav">
                     <a href="about.html" class="nav__enlace">About</a>
-                    <a href="#" class="nav__enlace">Location</a>
-                    <a href="#" class="nav__enlace">Careers</a>
+                    <a href="locations.html" class="nav__enlace">Location</a>
+                    <a href="careers.html" class="nav__enlace">Careers</a>
                 </nav>
     
                 <a href="#" class="header__get-scootin">Get Scootin</a>
@@ -190,6 +191,7 @@
                 </ul>
             </div>
         </div>
+        <p class="autor">Challenge by Frontend Mentor | Coded by <span>Jampiers Alexander Mucha Osorio</span> </p>
     </footer>
 
 
